<resources>
    <string name="app_name">MvvmDiffUtilRecyclerView</string>
    <string name="welcome">Welcome To Diff RecyclerView Demo</string>
    <string name="add_task">Add Task</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="new_task">New Task</string>
    <string name="enter_the_task_title">Enter The Task Title</string>
    <string name="enter_the_description">Enter The Description</string>
    <string name="save">SAVE</string>
    <string name="update_task">Update Task</string>
    <string name="update">Update</string>
</resources>