<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginHorizontal="10dp"
    style="@style/CardViewStyle"
    android:layout_margin="10dp"
    android:elevation="10dp"
    app:cardBackgroundColor="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/titleTaskTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/new_task"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:id="@+id/closeImg"
            android:layout_margin="8dp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_close"/>
        
        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_below="@id/titleTaskTxt"
            android:background="@color/black"
            android:id="@+id/viewLine"/>
        
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/viewLine"
            android:layout_marginVertical="8dp"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="16dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_the_task_title"
                android:id="@+id/edTaskTitleL">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    android:background="#EAE4E8"
                    android:inputType="text"
                    android:id="@+id/edTaskTitle"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_the_description"
                android:layout_marginTop="5dp"
                android:id="@+id/edTaskDescL">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#EAE4E8"
                    android:inputType="textMultiLine"
                    android:gravity="top|start"
                    android:maxLines="5"
                    android:lines="5"
                    android:id="@+id/edTaskDesc"/>

            </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/saveTaskBtn"
            android:layout_width="wrap_content"
            android:layout_height="?actionBarSize"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:textSize="20sp"
            android:backgroundTint="@color/black"
            android:text="@string/save"/>



        </LinearLayout>

    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>