<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginHorizontal="8dp"
    android:layout_marginVertical="4dp"
    style="@style/CardViewStyle"
    android:elevation="10dp"
    app:cardPreventCornerOverlap="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardBackgroundColor="@color/white">
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="false"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/editDeleteLayout"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titleTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textColor="@color/black"
                android:layout_marginVertical="4dp"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/descrTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textColor="@color/black"
                android:layout_marginVertical="4dp"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/dateTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textColor="@color/black"
                android:layout_marginVertical="4dp"
                android:textSize="13sp" />

        </LinearLayout>
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editDeleteLayout"
            android:layout_alignParentEnd="true"
            android:layout_centerHorizontal="true"
            android:orientation="vertical">
            
            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:id="@+id/editImg"
                android:layout_marginVertical="4dp"
                android:src="@drawable/ic_edit"/>

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:id="@+id/deleteImg"
                android:layout_marginVertical="4dp"
                android:src="@drawable/ic_delete"/>




        </LinearLayout>

    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>